[package]
name = "example-basic"
version = "0.1.0"
authors = ["Rex Isaac Raphael <rex.raphael@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
north = { path = "../../packages/north" }
tokio = { version = "1.14", features = ["full"] }

log = "0.4.14"
